--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@formspree/react": "^2.5.1",
+    "jquery": "^3.7.1",
+    "jquery-validation": "^1.21.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
